--- a/app/templates/document_download_template.html
+++ b/app/templates/document_download_template.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block page_title %}
-	GOV.UK - Document download
+	Notification - Document download
 {% endblock %}
 
 {% block content %}
@@ -34,6 +34,10 @@
 			</div>
 		</main>
 	</div>
+{% endblock %}
+
+
+{% block footer_fip %}
 {% endblock %}
 
 
