--- a/app/templates/views/index.html
+++ b/app/templates/views/index.html
@@ -1,7 +1,7 @@
 {% extends "document_download_template.html" %}
 
 {% block main_content %}
-  <h1 class="heading-large">You have a file to download</h1>
+  <h1 class="heading-large">{{ _('You have a file to download') }}</h1>
   <p>{{ service_name or '[SERVICE_NAME]'}} sent you a file to download.
 </p>
   <p>
