--- a/app/templates/views/download.html
+++ b/app/templates/views/download.html
@@ -1,22 +1,22 @@
 {% extends "document_download_template.html" %}
 
 {% block main_content %}
-  <h1 class="heading-large">Download your file</h1>
+  <h1 class="heading-large">{{ _('Download your file') }}</h1>
 
-  <p>Save your file somewhere you can find it. You may need to print it or show it to someone later.</p>
+  <p>{{ _('Save your file somewhere you can find it. You may need to print it or show it to someone later.') }}</p>
 
-<p>Check the email that {{ service_name or '[SERVICE_NAME]'}} sent you for more information.</p>
+<p>{{ _('Check the email that') }} {{ service_name or '[SERVICE_NAME]'}} {{ _('sent you for more information.') }}</p>
 
-<p><a href="{{download_link}}">Download this file to your device</a></p>
+<p><a href="{{download_link}}">{{ _('Download this file to your device') }}</a></p>
 
 <p>
-    If you have any questions,
+    {{ _('If you have any questions,') }}
     {% if contact_info_type == "link" %}
-      <a href={{ service_contact_info }}> contact {{ service_name }}</a>.
+      <a href={{ service_contact_info }}> {{ _('contact') }} {{ service_name }}</a>.
     {% elif contact_info_type == "email" %}
-      email <a href={{ "mailto:" + service_contact_info }}>{{service_contact_info}}</a>.
+      {{ _('email') }} <a href={{ "mailto:" + service_contact_info }}>{{service_contact_info}}</a>.
     {% else %}
-      call {{ service_contact_info }}.
+      {{ _('call') }} {{ service_contact_info }}.
     {% endif %}
   </p>
 {% endblock %}
