--- a/app/templates/views/index.html
+++ b/app/templates/views/index.html
@@ -2,19 +2,19 @@
 
 {% block main_content %}
   <h1 class="heading-large">{{ _('You have a file to download') }}</h1>
-  <p>{{ service_name or '[SERVICE_NAME]'}} sent you a file to download.
+  <p>{{ service_name or '[SERVICE_NAME]'}} {{ _('sent you a file to download.')}}
 </p>
   <p>
-    If you're not sure why you've been sent a file, or you have any questions,
+    {{ _('If you’re not sure why you’ve been sent a file, or you have any questions,') }}
     {% if contact_info_type == "link" %}
-      <a href={{ service_contact_info }}> contact {{ service_name }}</a>.
+      <a href={{ service_contact_info }}> {{ _('contact') }} {{ service_name }}</a>.
     {% elif contact_info_type == "email" %}
-      email <a href={{ "mailto:" + service_contact_info }}>{{service_contact_info}}</a>.
+      {{ _('email') }} <a href={{ "mailto:" + service_contact_info }}>{{service_contact_info}}</a>.
     {% else %}
-      call {{ service_contact_info }}.
+    {{ _('call') }} {{ service_contact_info }}.
     {% endif %}
   </p>
   <p>
-    <a href="{{url_for('main.download_document', service_id=service_id, document_id=document_id, key=key)}}" class="button">Continue</a>
+    <a href="{{url_for('main.download_document', service_id=service_id, document_id=document_id, key=key)}}" class="button">{{ _('Continue') }}</a>
   </p>
 {% endblock %}
