--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -22,3 +22,6 @@ $path: '/static/images/';
 @import 'elements/elements-typography';
 @import 'elements/layout';
 @import 'elements/panels';
+
+// local file
+@import 'components/banner.scss';
