--- a/app/templates/error/400.html
+++ b/app/templates/error/400.html
@@ -1,5 +1,5 @@
 {% extends "document_download_template.html" %}
-{% block per_page_title %}Bad Request{% endblock %}
+{% block per_page_title %}{{ _('Bad Request') }}{% endblock %}
 {% block main_content %}
 <div class="grid-row">
     <div class="column-two-thirds">
