--- a/app/templates/error/403.html
+++ b/app/templates/error/403.html
@@ -1,5 +1,5 @@
 {% extends "document_download_template.html" %}
-{% block per_page_title %}Forbidden{% endblock %}
+{% block per_page_title %}{{ _('Forbidden') }}{% endblock %}
 {% block main_content %}
     <div class="grid-row">
       <div class="column-two-thirds">
@@ -7,7 +7,7 @@
           403
         </h1>
         <p>
-          You do not have permission to view this page.
+          {{ _('You do not have permission to view this page.') }}'
         </p>
       </div>
     </div>
