--- a/app/templates/error/404.html
+++ b/app/templates/error/404.html
@@ -7,7 +7,7 @@
           {{ _('Page could not be found') }}
         </h1>
         <p>
-          {{ _('Check you've entered the correct web address.') }}
+          {{ _('Check you’ve entered the correct web address.') }}
         </p>
       </div>
     </div>
