--- a/app/templates/document_download_template.html
+++ b/app/templates/document_download_template.html
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block page_title %}
-  Notification - Document download
+  {{ _('GC Notify - Document download') }}
 {% endblock %}
 
 {% block inside_header %}
