--- a/app/templates/views/index.html
+++ b/app/templates/views/index.html
@@ -15,6 +15,6 @@
     {% endif %}
   </p>
   <p>
-    <a href="{{url_for('main.download_document', service_id=service_id, document_id=document_id, key=key)}}" class="button">{{ _('Continue') }}</a>
+    <a href="{{url_for('main.download_document', service_id=service_id, document_id=document_id, key=key, filename=filename)}}" class="button">{{ _('Continue') }}</a>
   </p>
 {% endblock %}
